# pumpfun_index

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
assets/: get_data.js  index.html
front/: Cargo.toml  index.html
front/src/: app.rs  lib.rs  main.rs
indexer/: Cargo.toml
indexer/pg/migrations/: 20250725055016_prices.sql
indexer/src/: cache.rs  indexer.rs  main.rs  model.rs
indexer/static/: index.html  indexer_front.js  indexer_front_bg.wasm  sw.js
pg/migrations/: 20250725055016_prices.sql
src/: cache.rs  db.rs  indexer.rs  main.rs  model.rs  pump_handler.rs  storage.rs
